delete unuse code.

--- a/nodemcu/index.html
+++ b/nodemcu/index.html
@@ -6,11 +6,8 @@
     <title>food manage - home</title>
     <meta name="description" content="A high-quality &amp; free Bootstrap admin dashboard template pack that comes with lots of templates and components.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="styles/all.css" rel="stylesheet">
     <link href="styles/googleicon.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" id="main-stylesheet" data-version="1.1.0" href="styles/shards-dashboards.1.1.0.min.css">
-    <link rel="stylesheet" href="styles/extras.1.1.0.min.css">
     <link rel="stylesheet" href="styles/site.css">
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/buttons.js"></script>
@@ -29,98 +26,45 @@
   <body class="h-100">
     <div class="container-fluid">
       <div class="row">
-        <!-- Main Sidebar -->
-        <aside class="main-sidebar col-12 col-md-3 col-lg-2 px-0">
-          <div class="main-navbar">
-            <nav class="navbar align-items-stretch navbar-light bg-white flex-md-nowrap border-bottom p-0">
-              <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
-                <div class="d-table m-auto">
-                  <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" src="images/shards-dashboards-logo.svg" alt="Shards Dashboard">
-                  <span class="d-none d-md-inline ml-1">Dashboard</span>
-                </div>
-              </a>
-              <a class="toggle-sidebar d-sm-inline d-md-none d-lg-none">
-                <i class="material-icons">&#xE5C4;</i>
-              </a>
-            </nav>
-          </div>
-          <div class="nav-wrapper">
-            <ul class="nav flex-column">
-              <li class="nav-item x">
-                <a class="nav-link load-link" href="#" name="overview">
-                  <i class="material-icons">home</i>
-                  <span>Overview</span>
-                </a>
-              </li>
-              <li class="nav-item x">
-                <a class="nav-link load-link" href="#" name="manage">
-                  <i class="material-icons">settings</i>
-                  <span>Settings</span>
-                </a>
-              </li>
-              <li class="nav-item x hide-menu" id="user-manage">
-                <a class="nav-link load-link" href="#" name="user">
-                  <i class="material-icons">person</i>
-                  <span>Users Manages</span>
-                </a>
-              </li>
-              <li class="nav-item x">
-                <a class="nav-link load-link" href="#" name="log">
-                  <i class="material-icons">vertical_split</i>
-                  <span>Food Amount Log</span>
-                </a>
-              </li>
-              <li class="nav-item x">
-                <a class="nav-link load-link" href="#" name="report">
-                  <i class="material-icons">assessment</i>
-                  <span>Report</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </aside>
-        <!-- End Main Sidebar -->
-        <main class="main-content col-lg-10 col-md-9 col-sm-12 p-0 offset-lg-2 offset-md-3">
+        <main class="main-content col-lg-12 col-md-9 col-sm-12 p-0">
           <div class="main-navbar sticky-top bg-white">
-            <!-- Main Navbar -->
+            <div class="menu-x">
+              <ul>
+                <li class="nav-item x">
+                  <a class="nav-link load-link" href="#" name="overview">
+                    <!-- <i class="material-icons">home</i> -->
+                    <span>Overview</span>
+                  </a>
+                </li>
+                <li class="nav-item x">
+                  <a class="nav-link load-link" href="#" name="manage">
+                    <!-- <i class="material-icons">settings</i> -->
+                    <span>Settings</span>
+                  </a>
+                </li>
+                <li class="nav-item x hide-menu" id="user-manage">
+                  <a class="nav-link load-link" href="#" name="user">
+                    <!-- <i class="material-icons">person</i> -->
+                    <span>Users Manages</span>
+                  </a>
+                </li>
+                <li class="nav-item x">
+                  <a class="nav-link load-link" href="#" name="log">
+                    <!-- <i class="material-icons">vertical_split</i> -->
+                    <span>Food Amount Log</span>
+                  </a>
+                </li>
+                <li class="nav-item x">
+                  <a class="nav-link load-link" href="#" name="report">
+                    <!-- <i class="material-icons">assessment</i> -->
+                    <span>Report</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
             <nav class="navbar align-items-stretch navbar-light flex-md-nowrap p-0">
               <div class="input-group input-group-seamless ml-3"></div>
               <ul class="navbar-nav border-left flex-row ">
-                <!-- <li class="nav-item border-right dropdown notifications">
-                  <a class="nav-link nav-link-icon text-center" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <div class="nav-link-icon__wrapper">
-                      <i class="material-icons">&#xE7F4;</i>
-                      <span class="badge badge-pill badge-danger">2</span>
-                    </div>
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-small" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="#">
-                      <div class="notification__icon-wrapper">
-                        <div class="notification__icon">
-                          <i class="material-icons">&#xE6E1;</i>
-                        </div>
-                      </div>
-                      <div class="notification__content">
-                        <span class="notification__category">Analytics</span>
-                        <p>Your website’s active users count increased by
-                          <span class="text-success text-semibold">28%</span> in the last week. Great job!</p>
-                      </div>
-                    </a>
-                    <a class="dropdown-item" href="#">
-                      <div class="notification__icon-wrapper">
-                        <div class="notification__icon">
-                          <i class="material-icons">&#xE8D1;</i>
-                        </div>
-                      </div>
-                      <div class="notification__content">
-                        <span class="notification__category">Sales</span>
-                        <p>Last week your store’s sales count decreased by
-                          <span class="text-danger text-semibold">5.52%</span>. It could have been worse!</p>
-                      </div>
-                    </a>
-                    <a class="dropdown-item notification__all text-center" href="#"> View all Notifications </a>
-                  </div>
-                </li> -->
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                     <img class="user-avatar rounded-circle mr-2" src="images/profiles/default.png" alt="User Avatar">
@@ -142,30 +86,7 @@
               </nav>
             </nav>
           </div>
-          <!-- / .main-navbar -->
           <div id="main-container"></div>
-          <!-- <footer class="main-footer d-flex p-2 px-3 bg-white border-top">
-            <ul class="nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-            </ul>
-            <span class="copyright ml-auto my-auto mr-2">Copyright © 2018
-              <a href="https://designrevision.com" rel="nofollow">DesignRevision</a>
-            </span>
-          </footer> -->
         </main>
       </div>
     </div>
